--- a/client/components/messages.html
+++ b/client/components/messages.html
@@ -1,7 +1,7 @@
 <template name="messages">
 <div class="message-history">
 {{ #each messages}}
-	{{> message text=textt}}
+	{{> message text=text}}
 {{ /each}}
 </div>
 </template>
