change footer detect key to form submit

--- a/client/components/footer.html
+++ b/client/components/footer.html
@@ -7,7 +7,9 @@
 			<span class="connection_status">online</span>
 		</div>
 		<div class="input-box">
-			<input type="text" class="input-box_text">
+			<form class="input-box-form">
+			<input type="text" class="input-box_text" placeholder="type here">
+			</form>
 		</div>
 	</div>
 </template>
