--- a/client/components/messages.html
+++ b/client/components/messages.html
@@ -1,7 +1,11 @@
 <template name="messages">
 <div class="message-history">
+{{#if Template.subscriptionsReady}}
 {{ #each messages}}
 	{{> message text=text user=users timeStamp = timeStamp}}
 {{ /each}}
+{{else}}
+	Loading...
+{{/if}}
 </div>
 </template>
